radarhack-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: radarhack-pod
  labels:
    name: nginx
    environment: dev
spec:
  containers:
  - name: radarhack
    image: docker.io/xxradar/naxsi5
    ports:
    - containerPort: 80
