radarhack-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: radarhack-pod2
spec:
  containers:
  - name: radarhack
    image: docker.io/xxradar/naxsi5
    ports:
    - containerPort: 80
