mytest.yaml

apiVersion: v1
kind: Service
metadata:
  name: my-radarhack-clusterip2
  labels:
    app: radarhack
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: radarhack
