radarhack-expose-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarhack-node
  labels radarhack-node
spec:
  selector:
    app: radarhack
  type: NodePort
  ports:
   - port: 80
     nodePort: 31555
