radarhack-expose-clusterip2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-radarhack-clusterip2
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: radarhack
