radarhack-expose-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-radarhack-externalname
spec:
  type: ExternalName
  externalName: www.radarhack.com 
  ports:
    - port: 80
      protocol: TCP
