radarhack-expose-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-radarhack-lb
  labels: 
    svc: my-radarhack-lb
spec:
  selector:
    app: radarhack
  type: LoadBalancer
  ports:
   - port: 80
