radarhack-expose-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarhack-nodeport
  labels: radarhack-nodeport
spec:
  selector:
    app: radarhack
  type: NodePort
  ports:
   - port: 80
     nodePort: 31556
